# Hytale-Secret

./: .gitignore  .replit  Dockerfile.server  push-github.sh  replit.md
.github/workflows/: build-rubidium.yml  build.yml
JurassicTale/: README.md
JurassicTale/src/jurassictale/: JurassicTaleConfig.java  JurassicTalePlugin.java
Rubidium-Framework/: .gitignore  README.md  TESTING.md  build.gradle.kts  gradlew  gradlew.bat  run-launcher.bat  run-server.sh  setupserver.sh
Rubidium-Framework/.github/workflows/: build.yml  ci.yml
Rubidium-Framework/docs/: index.md
Rubidium-Framework/docs/api-reference/: chat-api.md  command-api.md  index.md
Rubidium-Framework/launcher/: build-launcher.sh  build.gradle.kts  run-launcher.sh  settings.gradle.kts
Rubidium-Framework/libs/: README.txt
Rubidium-Framework/resources/: manifest.json  plugin.json  plugin.yml
Rubidium-Framework/scripts/: rubidium-test-gui.sh
Rubidium-Framework/test-server/: start.sh  stop.sh
RubidiumNetwork/: RubidiumNetwork.sln
attached_assets/: Pasted-1-Dino-Design-Pillars-Rules-we-follow-Every-dinosaur-sh_1768292157558.txt  Pasted-A-Compound-Power-Infrastructure-Power-Core-Tier-I-IV-Fi_1768292191786.txt  Pasted-Game-Title-JurassicTale-Internal-Codename-Project-Extin_1768292145390.txt  Pasted-Hytale-Performance-Saver-Plugin-This-plugin-ensures-sta_1768289207071.txt  Pasted-I-m-introducing-Lithium-an-early-stage-server-implement_1768129512532.txt  Pasted-MVP-Dino-Roster-Launch-Set-For-launch-12-16-dinos-max-s_1768292201734.txt  Pasted-Rubidium-Proprietary-License-Version-1-0-2026-Riley-Lia_1768206484687.txt  Pasted-Use-this-to-define-scope-not-to-implement-monetization-_1768116167040.txt  Pasted-Yellow-Tail-Local-remote-server-orchestrator-UX-Pond-Se_1768124890179.txt  Pasted-Yellow-Tale-Rubidium-Proprietary-License-Version-1-0-20_1768206256933.txt  Pasted-You-are-an-expert-systems-engineer-Rust-developer-and-d_1768039709062.txt  Pasted-You-are-building-the-core-foundation-of-a-native-deskto_1768139757693.txt
pond/: Cargo.toml  README.md  pond.toml
pond/plugins/example-plugin/: plugin.toml
pond/src/: lib.rs  main.rs
pond/src/core/: assets.rs  config.rs  integration.rs  mod.rs  plugins.rs  scheduler.rs  server.rs  telemetry.rs
pond/src/core/game/: adapter.rs  hooks.rs  mod.rs  world.rs
rubidium/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
rubidium/csharp-sdk/: Rubidium.csproj
rubidium/devkit-core/: README.md
rubidium/documentation/: API_REFERENCE.md  ARCHITECTURE.md  CHAT_SYSTEM.md  COMMANDS.md  ECONOMY.md  INDEX.md  PARTY_SYSTEM.md  PERFORMANCE.md  PERMISSIONS.md  TELEPORTATION.md  VOICE_CHAT.md  WAYPOINTS.md
rubidium/gradle-plugin/: build.gradle.kts
rubidium/java-sdk/: README.md
rubidium/runtime/: Cargo.toml  rubidium.toml
rubidium/runtime/src/: lib.rs  main.rs
rubidium/runtime/src/abstraction/: entities.rs  game_adapter.rs  mod.rs  snapshots.rs  world.rs
rubidium/runtime/src/admin/: cli.rs  health.rs  mod.rs  status.rs
rubidium/runtime/src/anticheat/: config.rs  findings.rs  mod.rs  service.rs
rubidium/runtime/src/anticheat/detectors/: combat.rs  mod.rs  movement.rs  packet.rs
rubidium/runtime/src/bootstrap/: diagnostics.rs  mod.rs  orchestrator.rs  phases.rs
rubidium/runtime/src/bridge/: console.rs  game_server.rs  mod.rs  process_manager.rs  protocol.rs
rubidium/runtime/src/core/: assets.rs  config.rs  mod.rs  performance.rs  plugins.rs  telemetry.rs
rubidium/runtime/src/events/: bus.rs  handlers.rs  mod.rs
rubidium/runtime/src/features/: adaptive_scheduler.rs  lazy_loading.rs  mod.rs  session_manager.rs  world_heatmap.rs
rubidium/runtime/src/features/cinema/: config.rs  mod.rs  paths.rs  service.rs
rubidium/runtime/src/features/mapping/: config.rs  coordinator.rs  markers.rs  minimap.rs  mod.rs  renderer.rs  worldmap.rs
rubidium/runtime/src/features/replay/: camera.rs  capture.rs  config.rs  mod.rs  playback.rs  storage.rs
rubidium/runtime/src/features/social/: config.rs  mod.rs  parties.rs  presence.rs
rubidium/runtime/src/features/toggles/: config.rs  mod.rs  registry.rs
rubidium/runtime/src/features/waypoints/: config.rs  mod.rs  service.rs  types.rs
rubidium/runtime/src/logging/: config.rs  formatters.rs  mod.rs
server/: Cargo.toml
server/migrations/: 004_admin_features_escrow.sql
server/src/: admin.rs  auth.rs  escrow.rs  features.rs  friends.rs  main.rs  relay.rs  stripe.rs  verification.rs
website/: package-lock.json  package.json  vite.config.ts
website/src/: App.css  App.tsx  index.css
yellow-tale/: .gitignore  Cargo.toml  README.md
yellow-tale-app/: index.html  package-lock.json  package.json
yellow-tale-app/src/: App.tsx  styles.css
yellow-tale-app/src-tauri/: Cargo.toml  tauri.conf.json
yellow-tale-app/src-tauri/src/: commands.rs  main.rs  state.rs
yellow-tale-app/src-tauri/src/future/: cosmetic_authority.rs  load_shedding.rs  mod.rs  packet_batching.rs  server_tick.rs
yellow-tale-app/src-tauri/src/optimizer/: asset_cache.rs  background_suppressor.rs  cpu_affinity.rs  frame_monitor.rs  hardware_presets.rs  memory.rs  mod.rs  mod_resolver.rs  process_priority.rs  save_snapshot.rs  world_hosting.rs
yellow-tale-core/: Cargo.toml
yellow-tale-core/src/: assets.rs  config.rs  features.rs  filesystem.rs  lib.rs  profile.rs  protocol.rs
yellow-tale/config/: defaults.toml
yellow-tale/src/: lib.rs  main.rs
yellow-tale/src/core/: features.rs  mod.rs
yellow-tale/src/core/client/: mod.rs
yellow-tale/src/core/config/: mod.rs
yellow-tale/src/core/db/: mod.rs
yellow-tale/src/core/diagnostics/: mod.rs
yellow-tale/src/core/friends/: mod.rs
yellow-tale/src/core/game/: adapter.rs  assets.rs  events.rs  mod.rs  protocol.rs
yellow-tale/src/core/ipc/: mod.rs
yellow-tale/src/core/launcher/: mod.rs
yellow-tale/src/core/mods/: mod.rs
yellow-tale/src/core/performance/: mod.rs
yellow-tale/src/core/relay/: mod.rs
yellow-tale/src/core/sessions/: mod.rs
yellow-tale/src/core/telemetry/: mod.rs
yellow-tale/src/core/users/: mod.rs
yellow-tale/src/core/util/: mod.rs
(+804 files in other folders)
