[package]
name = "yellow-tale"
version = "0.1.0"
edition = "2021"
authors = ["Yellow Tale Team"]
description = "High-performance native launcher and orchestration platform for Hytale"
license = "MIT"
repository = "https://github.com/yellow-tale/yellow-tale"
readme = "README.md"
keywords = ["hytale", "launcher", "gaming", "orchestration"]

[lib]
name = "yellow_tale"
path = "src/lib.rs"

[[bin]]
name = "yellow-tale"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info & diagnostics
sysinfo = "0.31"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hashing for content-addressed cache
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6.0"

# Semver for versioning
semver = { version = "1.0", features = ["serde"] }

# Random for invite codes
rand = "0.8"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Password hashing
argon2 = "0.5"

# Networking for tunneling
tokio-tungstenite = "0.24"
futures-util = "0.3"

# IP address handling
ipnet = "2.10"

# HTTP client for central server
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# Concurrent collections
dashmap = "5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
