[package]
name = "yellow-tale-app"
version = "0.1.0"
description = "Yellow Tale - Desktop Launcher for Hytale"
authors = ["Yellow Tale Team"]
license = "MIT"
repository = "https://github.com/yellow-tale/yellow-tale"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.31"
sha2 = "0.10"
hex = "0.4"
directories = "5"
dirs = "5"
flate2 = "1"
tar = "0.4"
walkdir = "2"
parking_lot = "0.12"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
